--- a/views/author_details.ejs
+++ b/views/author_details.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  </body> 
+  <body> 
     <%- include('./partials/head') %>
     <div class="container-fluid">
       <div class="row">
@@ -26,7 +26,7 @@
               </p>
             <% } else {%>
               <p>Author not Found</p>
-             <% } %> 
+            <% } %> 
 </div>
 </div>
 </div> 
