--- a/views/book_form.ejs
+++ b/views/book_form.ejs
@@ -45,6 +45,7 @@
                   <div class="form-group"> 
                     <label for="isbn">ISBN: </label>
                     <input type="text" name="isbn" id="isbn" class="form-control" required='true' placeholder='ISBN' value= "<%= typeof book=="undefined"?"": book.isbn%>"> 
+                    </div>
                   <div class="form-group">                  
                     <button class="btn btn-primary" type="submit">Submit</button>
                   </div>
