--- a/views/book_list.ejs
+++ b/views/book_list.ejs
@@ -6,7 +6,7 @@
       <div class="row">
         <%- include('./partials/nav') %>
           <div class="col-sm-10">
-<h1><% title %> </h1>
+<h1><%= title %> </h1>
 <ul>
 <% if(book_list.length >0){%>
     <% book_list.forEach(book =>  { %> 
