--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,16 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: #e0e9e1;
+  background-image: url(/images/bookcase.jpg);
+  background-size: 50%;
+  background-position: right center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
 }
 
 a {
-  color: #00B7FF;
+  color: #00b7ff;
 }
 
 .sidebar-nav {
