--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,8 @@
           <div class="col-sm-10">
           
           <h1><%= title %></h1>
-          <p>Welcome to LocalLiblary, a very basic Express website develpment as a tutorial example on the Mozilla Developer Network</p> 
-          <h1>Dynamic content</h1>
+          <p>Welcome to Local Liblary, Please add your favorite books, genres, and authors </p> 
+          <h1>Current Inventory</h1>
           <% if(error){ %> 
             <p> Error getting dynamic content</p>
           <% }else { %>
