--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,9 @@
 <html>
   </body> 
     <%- include('./partials/head') %>
-    <div class="container-fluid">
+    <div class="main-content">
+      <%- include('./partials/nav') %>
       <div class="row">
-        <%- include('./partials/nav') %>
           <div class="col-sm-10">
           
           <h1><%= title %></h1>
