--- a/views/author_delete.ejs
+++ b/views/author_delete.ejs
@@ -2,9 +2,10 @@
 <html>
   </body> 
     <%- include('./partials/head') %>
-    <div class="container-fluid">
+    <div class="main-content">
+      <%- include('./partials/nav') %>
       <div class="row">
-        <%- include('./partials/nav') %>
+
         <div class="col-sm-10">         
           <h1>Author: <%= author.name %> </h1>
           <p><%= author.lifespan %></p>
