--- a/views/author_list.ejs
+++ b/views/author_list.ejs
@@ -2,10 +2,12 @@
 <html>
   </body> 
     <%- include('./partials/head') %>
-    <div class="container-fluid">
-      <div class="row">
-        <%- include('./partials/nav') %>
-          <div class="col-sm-10">
+    <div class="main-content">
+    <%- include('./partials/nav') %>
+
+  
+     
+          <div>
 <h1><%= title %> </h1>
 <ul>
 <% if(author_list.length >0){%>
@@ -25,7 +27,7 @@
     </li>
     <% } %> 
 </ul>
-</div>
+
 </div>
 </div> 
 </body>
