--- a/views/book_details.ejs
+++ b/views/book_details.ejs
@@ -2,9 +2,9 @@
 <html>
   </body> 
     <%- include('./partials/head') %>
-    <div class="container-fluid">
+    <div class="main-content">
+      <%- include('./partials/nav') %>
       <div class="row">
-        <%- include('./partials/nav') %>
           <div class="col-sm-10">
             <% if(bookDetails){%>    
 <h1>Title: <%= bookDetails.book.title %> </h1>
